--- a/websockets/public/css/styles.css
+++ b/websockets/public/css/styles.css
@@ -1,3 +1,27 @@
 body{
-    background-color: green;
+    background-color: black;
+    color: white;
+}
+
+#output{
+    min-height: 200px;
+}
+
+.item{
+    display: flex;
+    justify-content: space-between;
+    margin:  50px;
+}
+
+.mail{
+    color: blue;
+}
+
+.date{
+    color: brown;
+}
+
+.msj{
+    font-style: italic;
+    color: green;
 }
