--- a/websockets/views/partials/historial.handlebars
+++ b/websockets/views/partials/historial.handlebars
@@ -1,18 +1,3 @@
-{{#if productsExist}}
-<div>
-    <table>
-        <tr> 
-            <th>nombre</th><th>precio</th> <th>foto</th>
-    {{#each products}}
-        <tr>
-            <td id="productoOutput"></td>
-            <td id="precioOutput"></td>
-            <td></td>
-        </tr>    
-    {{/each}} 
-        </tr> 
-    </table>
-</div>  
-{{else}}
-    <h3>no hay productos</h3>
-{{/if}}
+<div id="output">
+
+</div>
